--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap");
 
 
-/* Root element (aka html) */
+/* Root element (aka html) piyush */
 :root {
   box-sizing: border-box;
   scroll-behavior: smooth;
